# Copyright 2018 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary", "DEFAULT_LANGUAGES")

# gazelle:prefix github.com/bazelbuild/rules_sass
gazelle(
    name = "gazelle",
    gazelle = ":gazelle_sass",
)

gazelle_binary(
    name = "gazelle_sass",
    # keep
    languages = DEFAULT_LANGUAGES + [
        "@io_bazel_rules_sass//gazelle:go_default_library",
    ],
    visibility = [
        # In your project you should define your own Gazelle binary.  Follow
        # the instructions at
        # https://github.com/bazelbuild/bazel-gazelle/blob/master/extend.rst to
        # add the languages you depend on. You can use the gazelle target in
        # this file as an example if you just need golang, proto and SASS
        # support.
        "//visibility:public",
    ],
)
